samples/_failures_safe/1761465981_78216d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be4fe8c2.c: In function ‘main’:
./samples/SAFE/__tmp_be4fe8c2.c:168:5: error: expected declaration or statement at end of input
  168 |     }
      |     ^
